WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299939
fixed positioned elements not rendered in RTL/vertical-rl
https://bugs.webkit.org/show_bug.cgi?id=299939
Summary
fixed positioned elements not rendered in RTL/vertical-rl
Kiet Ho
Reported
2025-10-01 00:12:40 PDT
css/css-anchor-position/anchor-scroll-position-try-007.html seems to fully pass... except that the anchor positioned element isn't rendered at all. anchor() functions still resolve to the correct value though. It looks to be a vertical-rl issue - if the html { writing-mode: vertical-rl; } is removed, then the anchored element does render. Maybe a repaint issue?
Attachments
testcase
(693 bytes, text/html)
2025-10-08 13:25 PDT
,
fantasai
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-01 00:12:49 PDT
<
rdar://problem/161712734
>
fantasai
Comment 2
2025-10-08 13:25:26 PDT
Created
attachment 477030
[details]
testcase This seems to be a general problem with fixed positioning and RTL-direction scrolling... see this testcase, for example.
Simon Fraser (smfr)
Comment 3
2025-10-31 14:07:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/53272
EWS
Comment 4
2025-11-04 07:58:25 PST
Committed
302542@main
(6fe328a9c8a4): <
https://commits.webkit.org/302542@main
> Reviewed commits have been landed. Closing PR #53272 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug